EV-282 Removed unnecessary table and added two new ones

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -151,7 +151,10 @@
     <Compile Include="CROSSING_RELATIONSHIP.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
-    <Compile Include="CROSSING_SERVICE_SUB_DIV.cs">
+    <Compile Include="CROSSING_SERVICE_UNIT.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
+    <Compile Include="CROSSING_SUB_DIVISION.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
     <Compile Include="CROSSING_SUPPLEMENTAL.cs">
