--- a/DBI.Web.EMS/packages.config
+++ b/DBI.Web.EMS/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="iTextSharp-LGPL" version="4.1.6" targetFramework="net45" />
+  <package id="NinjaNye.SearchExtensions" version="0.6.5193.24776" targetFramework="net45" />
   <package id="odp.net.managed" version="121.1.1" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
