--- a/DBI.Core/DBI.Core.csproj
+++ b/DBI.Core/DBI.Core.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Web\BasePage.cs">
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
+    <Compile Include="Web\DBICustomException.cs" />
     <Compile Include="Web\ExtensionMethods\DateTime_xm.cs" />
     <Compile Include="Web\Mailer.cs" />
   </ItemGroup>
