Finished code for profile options added unit test project

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -223,6 +223,7 @@
     <Compile Include="DataFactory\Employees\Employees.cs" />
     <Compile Include="DataFactory\Employees\WebEmployee.cs" />
     <Compile Include="DataFactory\Equipment\Equipment.cs" />
+    <Compile Include="DBICustomException.cs" />
     <Compile Include="EMPLOYEES_V.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
