Fixed change to use schema name instead of class name

--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -326,7 +326,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Oracle.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Oracle\PA\Projects.cs" />
+    <Compile Include="Oracle\PA\PA.cs" />
     <Compile Include="Oracle\XXEMS\SYS_PROFILE_OPTIONS.cs" />
     <Compile Include="Oracle\XXEMS\SYS_USER_PROFILE_OPTIONS.cs" />
     <Compile Include="ORG_HIER_V.cs">
