--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -284,10 +284,11 @@
     <Compile Include="MTL_TRANSACTION_INT_V.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
+    <Compile Include="Oracle\GL.cs" />
     <Compile Include="Oracle\GL\OVERHEAD_BUDGET_TYPE.cs" />
     <Compile Include="Oracle\GL\Budgets.cs" />
     <Compile Include="Oracle\GL\OVERHEAD_GL_ACCOUNT.cs" />
-    <Compile Include="Oracle\HR\Organizations.cs" />
+    <Compile Include="Oracle\HR.cs" />
     <Compile Include="DataFactory\Interface\Interface.cs" />
     <Compile Include="DataFactory\GMS\Data.cs" />
     <Compile Include="DataFactory\Inventory\Inventory.cs" />
@@ -326,7 +327,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Oracle.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Oracle\PA\PA.cs" />
+    <Compile Include="Oracle\PA.cs" />
     <Compile Include="Oracle\XXEMS\SYS_PROFILE_OPTIONS.cs" />
     <Compile Include="Oracle\XXEMS\SYS_USER_PROFILE_OPTIONS.cs" />
     <Compile Include="ORG_HIER_V.cs">
