--- a/DBI.Data.Test/DBI.Data.Test.csproj
+++ b/DBI.Data.Test/DBI.Data.Test.csproj
@@ -116,6 +116,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TIME_CLOCKTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DBI.Core\DBI.Core.csproj">
