--- a/DBI.Data/DBI.Data.csproj
+++ b/DBI.Data/DBI.Data.csproj
@@ -97,6 +97,9 @@
     <Compile Include="..\DBI.AssemblyVersion\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
+    <Compile Include="BUD_BID_ACTUAL_NUM.cs">
+      <DependentUpon>Oracle.tt</DependentUpon>
+    </Compile>
     <Compile Include="BUD_BID_ADJUSTMENT.cs">
       <DependentUpon>Oracle.tt</DependentUpon>
     </Compile>
