--- a/DBI.Data.Test/DBI.Data.Test.csproj
+++ b/DBI.Data.Test/DBI.Data.Test.csproj
@@ -115,7 +115,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="PATest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XXDBI_DWTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DBI.Core\DBI.Core.csproj">
