EV-73 Added fiscal year check to application entry. Added union between kcs service unit & sub division with GMS data for UP, and CSX. Fixed problem with crossing info tab where if a new service unit is created the sub division will now disappear.

--- a/DBI.Data.Test/App.config
+++ b/DBI.Data.Test/App.config
@@ -10,4 +10,10 @@
   <connectionStrings>
     <add name="Entities" connectionString="metadata=res://*/Oracle.csdl|res://*/Oracle.ssdl|res://*/Oracle.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;data source=S0056.dbiservices.com:1522/AppDev;password=qQTVPCGE;persist security info=True;user id=XXEMS&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
+ <system.data>
+    <DbProviderFactories>
+      <remove invariant="Oracle.ManagedDataAccess.Client" />
+      <add name="ODP.NET, Managed Driver" invariant="Oracle.ManagedDataAccess.Client" description="Oracle Data Provider for .NET, Managed Driver" type="Oracle.ManagedDataAccess.Client.OracleClientFactory, Oracle.ManagedDataAccess, Version=4.121.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342" />
+    </DbProviderFactories>
+  </system.data>
 </configuration>
