--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -133,6 +133,8 @@
     <Content Include="Views\Modules\BudgetBidding\umYearBudget.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\ManageKCS.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umAppDate.aspx" />
+    <Content Include="Views\Modules\CrossingMaintenance\umBillingInvoice.aspx" />
+    <Content Include="Views\Modules\CrossingMaintenance\umBillingMain.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umCrossingHome.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umDataEntryMain.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umIncident.aspx" />
@@ -151,6 +153,7 @@
     <Content Include="Views\Modules\CrossingMaintenance\umReportsMain.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umStateCrossingsList.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umSupplemental.aspx" />
+    <Content Include="Views\Modules\CrossingMaintenance\umSupplementalBilling.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umCustomerSurveyAdmin.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umManageForms.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umManageOrgs.aspx" />
@@ -283,6 +286,20 @@
     <Compile Include="Views\Modules\CrossingMaintenance\umAppDate.aspx.designer.cs">
       <DependentUpon>umAppDate.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Views\Modules\CrossingMaintenance\umBillingInvoice.aspx.cs">
+      <DependentUpon>umBillingInvoice.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\CrossingMaintenance\umBillingInvoice.aspx.designer.cs">
+      <DependentUpon>umBillingInvoice.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\CrossingMaintenance\umBillingMain.aspx.cs">
+      <DependentUpon>umBillingMain.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\CrossingMaintenance\umBillingMain.aspx.designer.cs">
+      <DependentUpon>umBillingMain.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Modules\CrossingMaintenance\umCrossingHome.aspx.cs">
       <DependentUpon>umCrossingHome.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -408,6 +425,13 @@
     </Compile>
     <Compile Include="Views\Modules\CrossingMaintenance\umSupplemental.aspx.designer.cs">
       <DependentUpon>umSupplemental.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\CrossingMaintenance\umSupplementalBilling.aspx.cs">
+      <DependentUpon>umSupplementalBilling.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\CrossingMaintenance\umSupplementalBilling.aspx.designer.cs">
+      <DependentUpon>umSupplementalBilling.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\CustomerSurveys\umCustomerSurveyAdmin.aspx.cs">
       <DependentUpon>umCustomerSurveyAdmin.aspx</DependentUpon>
