--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -205,6 +205,8 @@
     <Content Include="Views\Modules\TimeClock\umEmployeeClock.aspx" />
     <Content Include="Views\Modules\TimeClock\umManagerView.aspx" />
     <Content Include="Views\Modules\TimeClock\umPayrollView.aspx" />
+    <Content Include="Views\Modules\TimeClock\umTimeClockReports.aspx" />
+    <Content Include="Views\Modules\TimeClock\umUnapprovedHoursReport.aspx" />
     <Content Include="Views\uxDefault.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -806,6 +808,20 @@
     </Compile>
     <Compile Include="Views\Modules\TimeClock\umPayrollView.aspx.designer.cs">
       <DependentUpon>umPayrollView.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\TimeClock\umTimeClockReports.aspx.cs">
+      <DependentUpon>umTimeClockReports.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\TimeClock\umTimeClockReports.aspx.designer.cs">
+      <DependentUpon>umTimeClockReports.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\TimeClock\umUnapprovedHoursReport.aspx.cs">
+      <DependentUpon>umUnapprovedHoursReport.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\TimeClock\umUnapprovedHoursReport.aspx.designer.cs">
+      <DependentUpon>umUnapprovedHoursReport.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\uxDefault.aspx.cs">
       <DependentUpon>uxDefault.aspx</DependentUpon>
