--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -191,6 +191,7 @@
     <Content Include="Views\Modules\Overhead\umViewBudgets.aspx" />
     <Content Include="Views\Modules\Overhead\Views\umAddRemoveBudgetType.aspx" />
     <Content Include="Views\Modules\Overhead\Views\umBudgetTypesByLegalEntity.aspx" />
+    <Content Include="Views\Modules\Overhead\Views\umGeneralLedgerAccounts.aspx" />
     <Content Include="Views\Modules\Overhead\Views\umOrganizationSecurity.aspx" />
     <Content Include="Views\Modules\Security\Options\AddEdit\umAddEditProfileOptions.aspx" />
     <Content Include="Views\Modules\Security\umEditGroups.aspx" />
@@ -709,6 +710,13 @@
     </Compile>
     <Compile Include="Views\Modules\Overhead\Views\umBudgetTypesByLegalEntity.aspx.designer.cs">
       <DependentUpon>umBudgetTypesByLegalEntity.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\Overhead\Views\umGeneralLedgerAccounts.aspx.cs">
+      <DependentUpon>umGeneralLedgerAccounts.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\Overhead\Views\umGeneralLedgerAccounts.aspx.designer.cs">
+      <DependentUpon>umGeneralLedgerAccounts.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\Overhead\Views\umOrganizationSecurity.aspx.cs">
       <DependentUpon>umOrganizationSecurity.aspx</DependentUpon>
