--- a/DBI.Mobile.Notifications/DBI.Mobile.Notifications.csproj
+++ b/DBI.Mobile.Notifications/DBI.Mobile.Notifications.csproj
@@ -95,6 +95,7 @@
   <ItemGroup>
     <None Include="App.config">
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
     <None Include="PushSharp.PushCert.Production.p12">
