--- a/DBI.Core/DBI.Core.csproj
+++ b/DBI.Core/DBI.Core.csproj
@@ -81,6 +81,7 @@
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Web\ExtensionMethods\DateTime_xm.cs" />
+    <Compile Include="Web\ExtensionMethods\IQueryable_xm.cs" />
     <Compile Include="Web\Mailer.cs" />
   </ItemGroup>
   <ItemGroup>
