--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -151,8 +151,10 @@
     <Content Include="Views\Modules\CrossingMaintenance\umReportsMain.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umStateCrossingsList.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umSupplemental.aspx" />
+    <Content Include="Views\Modules\CustomerSurveys\umFormEntry.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umManageForms.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umManageOrgs.aspx" />
+    <Content Include="Views\Modules\CustomerSurveys\umSurveyCategories.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umViewSurvey.aspx" />
     <Content Include="Views\Modules\DailyActivity\ImageLoader\ImageLoader.aspx" />
     <Content Include="Views\Modules\DailyActivity\umAddEditChemical.aspx" />
@@ -414,6 +416,13 @@
     <Compile Include="Views\Modules\CrossingMaintenance\umSupplemental.aspx.designer.cs">
       <DependentUpon>umSupplemental.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Views\Modules\CustomerSurveys\umFormEntry.aspx.cs">
+      <DependentUpon>umFormEntry.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\CustomerSurveys\umFormEntry.aspx.designer.cs">
+      <DependentUpon>umFormEntry.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Views\Modules\CustomerSurveys\umManageForms.aspx.cs">
       <DependentUpon>umManageForms.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -427,6 +436,13 @@
     </Compile>
     <Compile Include="Views\Modules\CustomerSurveys\umManageOrgs.aspx.designer.cs">
       <DependentUpon>umManageOrgs.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Views\Modules\CustomerSurveys\umSurveyCategories.aspx.cs">
+      <DependentUpon>umSurveyCategories.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Views\Modules\CustomerSurveys\umSurveyCategories.aspx.designer.cs">
+      <DependentUpon>umSurveyCategories.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\CustomerSurveys\umViewSurvey.aspx.cs">
       <DependentUpon>umViewSurvey.aspx</DependentUpon>
