EV-137 #time 2h remove original admin page, Update methods based on new threshold setup.

--- a/DBI.Web.EMS/DBI.Web.EMS.csproj
+++ b/DBI.Web.EMS/DBI.Web.EMS.csproj
@@ -157,7 +157,6 @@
     <Content Include="Views\Modules\CustomerSurveys\umFormEntry.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umSupplementalBilling.aspx" />
     <Content Include="Views\Modules\CrossingMaintenance\umWeeklyWorkActivity.aspx" />
-    <Content Include="Views\Modules\CustomerSurveys\umCustomerSurveyAdmin.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umManageForms.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umManageOrgs.aspx" />
     <Content Include="Views\Modules\CustomerSurveys\umSurveyCategories.aspx" />
@@ -190,12 +189,6 @@
     <Content Include="Views\Modules\DailyActivity\umSubmitActivity_DBI.aspx" />
     <Content Include="Views\Modules\DailyActivity\umSubmitActivity_IRM.aspx" />
     <Content Include="Views\Modules\DailyActivity\umWeatherTab.aspx" />
-    <Content Include="Views\Modules\Overhead\Backup\BudgetType\AddEdit\umAddEditBudgetType.aspx" />
-    <Content Include="Views\Modules\Overhead\Backup\GLSecurity\Add\umAddGLAccount.aspx" />
-    <Content Include="Views\Modules\Overhead\Backup\BudgetType\umBudgetTypes.aspx" />
-    <Content Include="Views\Modules\Overhead\Backup\umOrganizationBudgetSecurity.aspx" />
-    <Content Include="Views\Modules\Overhead\Backup\GLSecurity\umGLSecurity.aspx" />
-    <Content Include="Views\Modules\Overhead\Backup\umViewBudgets.aspx" />
     <Content Include="Views\Modules\Overhead\Views\umAddRemoveBudgetType.aspx" />
     <Content Include="Views\Modules\Overhead\Views\umBudgetTypesByLegalEntity.aspx" />
     <Content Include="Views\Modules\Overhead\Views\umOrganizationSecurity.aspx" />
@@ -223,8 +216,6 @@
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="Views\Modules\Overhead\Backup\GenericHandlers\ghBudgetCodes.ashx" />
-    <Content Include="Views\Modules\Overhead\Backup\GenericHandlers\ghBudgetParentCodes.ashx" />
     <None Include="Web.APPDEV.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -447,6 +438,8 @@
     </Compile>
     <Compile Include="Views\Modules\CustomerSurveys\umFormEntry.aspx.cs">
       <DependentUpon>umFormEntry.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="Views\Modules\CrossingMaintenance\umSupplementalBilling.aspx.cs">
       <DependentUpon>umSupplementalBilling.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -460,10 +453,6 @@
     </Compile>
     <Compile Include="Views\Modules\CrossingMaintenance\umWeeklyWorkActivity.aspx.designer.cs">
       <DependentUpon>umWeeklyWorkActivity.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Modules\CustomerSurveys\umCustomerSurveyAdmin.aspx.cs">
-      <DependentUpon>umCustomerSurveyAdmin.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Views\Modules\CustomerSurveys\umFormEntry.aspx.designer.cs">
       <DependentUpon>umFormEntry.aspx</DependentUpon>
@@ -693,66 +682,6 @@
       <DependentUpon>umWeatherTab.aspx</DependentUpon>
     </Compile>
     <Compile Include="Views\Modules\DailyActivity\ValidationChecks.cs" />
-    <Compile Include="Views\Modules\Overhead\Backup\BudgetType\AddEdit\umAddEditBudgetType.aspx.cs">
-      <DependentUpon>umAddEditBudgetType.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\BudgetType\AddEdit\umAddEditBudgetType.aspx.designer.cs">
-      <DependentUpon>umAddEditBudgetType.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\GenericHandlers\ghBudgetParentCodes.ashx.cs">
-      <DependentUpon>ghBudgetParentCodes.ashx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\GenericHandlers\ghBudgetCodes.ashx.cs">
-      <DependentUpon>ghBudgetCodes.ashx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\GenericHandlers\GLBranchCodes.ashx.cs">
-      <DependentUpon>GLBranchCodes.ashx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\GenericHandlers\GLDivisionCodes.ashx.cs">
-      <DependentUpon>GLDivisionCodes.ashx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\GenericHandlers\GLLocationCodes.ashx.cs">
-      <DependentUpon>GLLocationCodes.ashx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\GenericHandlers\GLCompanyCodes.ashx.cs">
-      <DependentUpon>GLCompanyCodes.ashx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\GLSecurity\Add\umAddGLAccount.aspx.cs">
-      <DependentUpon>umAddGLAccount.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\GLSecurity\Add\umAddGLAccount.aspx.designer.cs">
-      <DependentUpon>umAddGLAccount.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\BudgetType\umBudgetTypes.aspx.cs">
-      <DependentUpon>umBudgetTypes.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\BudgetType\umBudgetTypes.aspx.designer.cs">
-      <DependentUpon>umBudgetTypes.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\umOrganizationBudgetSecurity.aspx.cs">
-      <DependentUpon>umOrganizationBudgetSecurity.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\umOrganizationBudgetSecurity.aspx.designer.cs">
-      <DependentUpon>umOrganizationBudgetSecurity.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\GLSecurity\umGLSecurity.aspx.cs">
-      <DependentUpon>umGLSecurity.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\GLSecurity\umGLSecurity.aspx.designer.cs">
-      <DependentUpon>umGLSecurity.aspx</DependentUpon>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\umViewBudgets.aspx.cs">
-      <DependentUpon>umViewBudgets.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-    </Compile>
-    <Compile Include="Views\Modules\Overhead\Backup\umViewBudgets.aspx.designer.cs">
-      <DependentUpon>umViewBudgets.aspx</DependentUpon>
-    </Compile>
     <Compile Include="Views\Modules\Overhead\Views\umAddRemoveBudgetType.aspx.cs">
       <DependentUpon>umAddRemoveBudgetType.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -926,10 +855,6 @@
     <Content Include="Resources\Scripts\jquery-2.0.1.min.map" />
     <Content Include="Views\Handlers\SystemUsers.ashx" />
     <Content Include="Views\Handlers\WebProjects.ashx" />
-    <Content Include="Views\Modules\Overhead\Backup\GenericHandlers\GLCompanyCodes.ashx" />
-    <Content Include="Views\Modules\Overhead\Backup\GenericHandlers\GLLocationCodes.ashx" />
-    <Content Include="Views\Modules\Overhead\Backup\GenericHandlers\GLDivisionCodes.ashx" />
-    <Content Include="Views\Modules\Overhead\Backup\GenericHandlers\GLBranchCodes.ashx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DBI.Core\DBI.Core.csproj">
@@ -959,7 +884,11 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Views\Modules\Overhead\Backup\BudgetType\AddEdit\" />
+    <Folder Include="Views\Modules\Overhead\Backup\GenericHandlers\" />
+    <Folder Include="Views\Modules\Overhead\Backup\GLSecurity\Add\" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
