#EV-134 #time 8h 15m Completed validation on range selection form for GL Accounts

--- a/DBI.Core/DBI.Core.csproj
+++ b/DBI.Core/DBI.Core.csproj
@@ -82,6 +82,7 @@
     </Compile>
     <Compile Include="Web\ExtensionMethods\DateTime_xm.cs" />
     <Compile Include="Web\ExtensionMethods\IQueryable_xm.cs" />
+    <Compile Include="Web\ExtensionMethods\String_xm.cs" />
     <Compile Include="Web\Mailer.cs" />
   </ItemGroup>
   <ItemGroup>
